--- a/hw02/index.html
+++ b/hw02/index.html
@@ -199,13 +199,13 @@
         <!-- ------------------------------------------------>
         <div class="row hw12">
             <div class="col-md-12 twenty">
-                Simple Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span
+                <!-- Simple Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span
                     style="color:red;">02</span>/simple/ 檔案夾。<br>
                 Medium Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span
                     style="color:red;">02</span>/medium/ 檔案夾。<br>
                 Strong Baseline 的壓縮檔，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span
-                    style="color:red;">02</span>/strong/ 檔案夾。<br>
-                備註: 作業截圖以上傳至個人github圖雲 因此沒有放在資料夾中
+                    style="color:red;">02</span>/strong/ 檔案夾。<br> -->
+                備註: 作業截圖已上傳至個人github圖雲 因此沒有放在資料夾中
             </div>
         </div>
 
