writing soooooooooome feedback and overview

--- a/hw01/index.html
+++ b/hw01/index.html
@@ -278,8 +278,8 @@
     <!-- ------------------------------------------------>
     <div class="row hw12">
       <div class="col-md-12 twenty">
-        心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105
-        字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+        本次作業的內容是vscode的字體替換，以往使用vscode時經常出現的許多符號在Fira
+        coded字體的替換下變成了更直覺能夠理解的符號，此外時刻表っぽいフォント字體也非常有趣。能夠化為交通圖示也不失為一種字體的樂趣。我認為正是由於字體的靈活和在規範之中的自由，因此創作出了許多通用於各種場景下的特色字體。
       </div>
     </div>
 
