--- a/hw02/index.html
+++ b/hw02/index.html
@@ -205,7 +205,6 @@
                     style="color:red;">02</span>/medium/ 檔案夾。<br>
                 Strong Baseline 的壓縮檔，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span
                     style="color:red;">02</span>/strong/ 檔案夾。<br> -->
-                備註: 作業截圖已上傳至個人github圖雲 因此沒有放在資料夾中
             </div>
         </div>
 
@@ -223,7 +222,7 @@
         <div class="row hw12">
             <div class="col-md-12 twenty">
                 心得：<br>
-                這次的作業是生成稿紙，為了讓我們在蒐集手寫字的資料集時，能快速的將手寫字掃描成圖片，而進行此前製步驟。
+                本次的作業是完成手寫字體建置的第一步，在環境架設完成後依序進行去除重複字與空格、確定要生成的字有哪些後再設定稿紙參數並生成稿紙格式以及QR-CODE。在手寫字體的撰寫過程中雖然一度感到疲憊，但很慶幸的還是完成了，同時也無法想像去年書寫的數量竟是百餘張，十分佩服能夠完成的人們。以往接觸到的字體生成大多都是基於現有字體的改良以及字集增減，因此本次的經驗十分新奇。
             </div>
         </div>
 
