--- a/hw03/index.html
+++ b/hw03/index.html
@@ -223,8 +223,7 @@
 
     <div class="row hw12">
       <div class="col-md-12 twenty">
-        心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告
-        105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+        在上回的稿紙生成的完成後，本次進行到第二步，將寫好的稿紙掃描後進行旋轉的校正並基於校正後的目標方格內切割出一個個的字符並存檔。在重新閱讀完程式碼後也有從原作者的處理步驟以及參數調用中獲得許多啟發和靈感。十分期待最終的成果。
       </div>
     </div>
 
