--- a/hw04/index.html
+++ b/hw04/index.html
@@ -225,12 +225,7 @@
       <div class="col-md-12 twenty">
         <h4><u>心得(約100字)</u></h4>
         <h5>
-          這次作業的目的是將自己的手寫字體製作成可以用於電腦上的電腦字體。這個作業讓我體驗了字體設計、字形描繪、字體編碼等多項技能，也讓我對手寫字體有了更深入的了解，在字體設計方面，我參考了多種手寫字體的風格，並結合了自己的喜好，最終定下了帶有方方正正的字體樣式。在字形描繪方面，我使用原子筆逐筆描繪了每個字形，並盡量保持字體的流暢與一致。在字體編碼方面，我學習了字體編碼的相關知識，並使用字體編輯軟體完成了字體的編碼工作。
-
-          <br> 經過三週的努力，我終於完成了自己的手寫電腦字體。使用自己設計的字體來撰寫文件，不僅讓文件更加個性化，也讓我感受到手寫字體的獨特魅力。
-
-          <br>
-          這次作業讓我意識到，製作手寫電腦字體是一項需要耐心與細心的工作。在字體設計方面，需要考慮字體的整體風格、筆觸的粗細、字形的結構等因素；在字形描繪方面，需要仔細描繪每個字形，確保字體的準確與美觀；在字體編碼方面，需要學習字體編碼的相關知識，並使用字體編輯軟體完成字體的編碼工作，雖然製作手寫電腦字體的過程充滿了挑戰，但我從中也學到了很多知識與技能。這次作業不僅讓我對手寫字體有了更深入的了解，也提升了我的字體設計與編碼能力。
+          作業四終於來到本次字體製作的最後一個步驟，將上一步裁切並命名為各自的unicode碼的手寫字符轉檔後進行進一步的影像後處理，其中fillrule的技術更是重要的一環。在去除完黏合起的黑色區域後便可以進行導入，並透過fontforge程式輸出WOFF2和TTF的字體。
         </h5>
       </div>
     </div>
