--- a/hw06/index.html
+++ b/hw06/index.html
@@ -200,15 +200,15 @@
     <div class="row hw12">
       <div class="col-md-12 twenty">
         該次作業程式碼，請放在 <a
-          href="https://github.com/chiaoooo/ct2024s/tree/main/hw06/src/upload_csv/hsieh.csv">https://github.com/<span
-            style="color:red;">chiaoooo</span>/ct2024s/hw<span style="color:red;">06</span>/src/upload_csv 檔案夾。
+          href="https://github.com/laudantstolam/ct2024s/tree/main/hw06/src/upload_csv/result.csv">https://github.com/<span
+            style="color:red;">laudantstolam</span>/ct2024s/hw<span style="color:red;">06</span>/src/upload_csv 檔案夾。
       </div>
     </div>
 
     <!-- ------------------------------------------------>
     <div class="row hw12">
       <div class="col-md-12 twenty">
-        本次的作業式我認為目前為止的作業中最有趣的部分之一，將同組同學的手寫字體進行特徵比對後進行圖像化的呈現。在D3的部分原先使用散點圖+hover的效果進行呈現，在訓練完結果並針對程式碼結合個人先前製作其他專案時使用到的D3.js的經驗針對進行部分的優化之後有更新了新的呈現方式。
+        本次的作業我認為是目前為止的作業中最有趣的部分之一，將同組同學的手寫字體進行特徵比對後進行圖像化的呈現。在D3的部分原先使用散點圖+hover的效果進行呈現，在訓練完結果並針對程式碼結合個人先前製作其他專案時使用到的D3.js的經驗針對進行部分的優化之後有更新了新的呈現方式。
       </div>
     </div>
 
@@ -248,7 +248,7 @@
         <table>
           <tr>
             <td>
-              <img src="src/compare_plot/hsieh.png" height="600" width="900">
+              <img src="../hw06/src/COMPARE_RESULT.png">
             </td>
           </tr>
         </table>
