--- a/hw06/hover.html
+++ b/hw06/hover.html
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-    <img src="src/hsieh/111598002.jpg" height="150" width="150">
-    <script>
+    <img src="./src/liu/1092B0020.jpg" height="150" width="150">
+    <!-- <script>
         // 设定SVG大小
         var margin = { top: 10, right: 30, bottom: 30, left: 60 },
             width = 860 - margin.left - margin.right,
@@ -38,7 +38,7 @@
             .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
         // 加载CSV数据
-        d3.csv("src/upload_csv/hsieh.csv").then(function (data) {
+        d3.csv("./src/upload_csv/result.csv").then(function (data) {
 
             // 设置X轴比例尺
             var x = d3.scaleLinear()
@@ -104,7 +104,108 @@
                     tooltip.transition()
                         .duration(200)
                         .style("opacity", .9);
-                    tooltip.html("<img src='src/hsieh/" + d.Student + "' alt='Handwriting' width='120' height='120'>")
+                    tooltip.html("<img src='./src/liu/" + d.Student + "' alt='Handwriting' width='120' height='120'>")
+                        .style("left", (d3.event.pageX) + "px")
+                        .style("top", (d3.event.pageY - 28) + "px");
+                })
+                .on("mouseout", function (d) {
+                    tooltip.transition()
+                        .duration(500)
+                        .style("opacity", 0);
+                });
+        });
+
+    </script> -->
+    <script>
+        // 设定SVG大小
+        var margin = { top: 10, right: 30, bottom: 30, left: 60 },
+            width = 860 - margin.left - margin.right,
+            height = 460 - margin.top - margin.bottom;
+
+        // 添加SVG到body
+        var svg = d3.select("body").append("svg")
+            .attr("width", width + margin.left + margin.right)
+            .attr("height", height + margin.top + margin.bottom)
+            .append("g")
+            .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+        // 加载CSV数据
+        d3.csv("./src/upload_csv/result.csv").then(function (data) {
+
+            // 设置X轴比例尺
+            var x = d3.scaleLinear()
+                .domain([0, 1]) // Assuming SSIM values are between 0 and 1
+                .range([0, width]);
+            svg.append("g")
+                .attr("transform", "translate(0," + height + ")")
+                .call(d3.axisBottom(x));
+
+            svg.append("g")
+                .attr("transform", "translate(0," + height + ")")
+                .call(d3.axisBottom(x))
+                // 添加X軸標籤
+                .append("text")
+                .attr("class", "axis-label")
+                .attr("x", width) // 將標籤放置在軸的末端
+                .attr("y", -20) // 在X軸線下方一點的位置
+                .style("text-anchor", "end") // 文本對齊方式
+                .text("SSIM");
+
+            // 设置Y轴比例尺
+            var y = d3.scaleLinear()
+                .domain([0, 1]) // Assuming LPIPS values are between 0 and 1
+                .range([height, 0]);
+            svg.append("g")
+                .call(d3.axisLeft(y));
+
+            // 添加Y軸以及標籤
+            svg.append("g")
+                .call(d3.axisLeft(y))
+                // 添加Y軸標籤
+                .append("text")
+                .attr("class", "axis-label")
+                .attr("transform", "rotate(-90)") // 旋轉標籤
+                .attr("y", 30) // 在Y軸線左方一點的位置
+                .attr("dy", ".71em") // 微調位置
+                .style("text-anchor", "end") // 文本對齊方式
+                .text("LPIPS");
+
+            // 找出SSIM最接近1且LPIPS最接近0的資料點
+            var closestPoint = data.reduce(function (prev, curr) {
+                var prevDiff = Math.abs(prev.SSIM - 1) + Math.abs(prev.LPIPS - 0);
+                var currDiff = Math.abs(curr.SSIM - 1) + Math.abs(curr.LPIPS - 0);
+                return (currDiff < prevDiff) ? curr : prev;
+            });
+
+            // 创建散点
+            svg.append('g')
+                .selectAll("dot")
+                .data(data) // 使用原始資料
+                .enter()
+                .append("circle")
+                .attr("cx", function (d) { return x(d.SSIM); })
+                .attr("cy", function (d) { return y(d.LPIPS); })
+                .attr("r", 6)
+                .style("fill", function (d) {
+                    if (d === closestPoint) {
+                        return "red";
+                    } else {
+                        return "#69b3a2";
+                    }
+                });
+
+            // 创建工具提示
+            var tooltip = d3.select("body").append("div")
+                .attr("id", "tooltip")
+                .style("opacity", 0);
+
+
+            svg.selectAll("circle")
+                .on("mouseover", function (d) {
+                    tooltip.transition()
+                        .duration(200)
+                        .style("opacity", .9);
+                    tooltip.html("<img src='./src/liu/" + d.Student + "' alt='Handwriting' width='120' height='120'>")
                         .style("left", (d3.event.pageX) + "px")
                         .style("top", (d3.event.pageY - 28) + "px");
                 })
@@ -116,6 +217,8 @@
         });
 
     </script>
+
+
 </body>
 
 </html>
