--- a/hw05/index.html
+++ b/hw05/index.html
@@ -212,7 +212,7 @@
     <!-- ------------------------------------------------>
     <div class="row hw12">
       <div class="col-md-12 twenty">
-        本次作業製作過程中遇到了無法
+        本次作業是利用深度學習進行模型zi2zi的實作與訓練，在過程中雖然有遇到環境安裝的問題無法成功完成訓練且在電腦教室進行遠端連線的電腦亦被關機重製因此未完成後續作業指示。
       </div>
     </div>
 
